Updated description of the model

--- a/models/iris_magnus/model.config
+++ b/models/iris_magnus/model.config
@@ -11,7 +11,7 @@
 
   <description>
     This is an adaptation of the model of the 3DR Iris Quadrotor. The original model has been created by
-    Thomas Gubler and is maintained by Lorenz Meier. This model includes two motors for two cylindrical
-    wings, below the center of the main frame.
+    Thomas Gubler and is maintained by Lorenz Meier. This model includes two cylindrical wings, below the
+    center of the main frame, connected to it by revolute joints.
   </description>
 </model>
