--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,10 @@ add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catk
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node trajectory_control ${catkin_LIBRARIES})
 
+add_executable(awe_control_node src/awe_control_node.cpp)
+add_dependencies(awe_control_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(awe_control_node trajectory_control ${catkin_LIBRARIES})
+
 add_executable(offb_node src/offb_node.cpp)
 add_dependencies(offb_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(offb_node ${catkin_LIBRARIES})
@@ -173,7 +177,7 @@ target_link_libraries(offb_node ${catkin_LIBRARIES})
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 install(
-  PROGRAMS trajectory_gen.py display.py
+  PROGRAMS trajectory_gen.py reference_gen.py display.py display_awe.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
@@ -181,6 +185,11 @@ install(
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
 install(
   TARGETS ${PROJECT_NAME}_node
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(
+  TARGETS awe_control_node
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
