Update model magnus models structure and start new wing model

--- a/models/iris_model_new/model.config
+++ b/models/iris_model_new/model.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <model>
-  <name>3DR Iris with Magnus wings</name>
+  <name>3DR Iris Magnus from Iris</name>
   <version>1.0</version>
-  <sdf version='1.4'>iris_magnus.sdf</sdf>
+  <sdf version='1.4'>iris_model_new.sdf</sdf>
 
   <author>
    <name>Matheus Bruhns Bastos</name>
