--- a/models/iris_magnus/model.config
+++ b/models/iris_magnus/model.config
@@ -11,7 +11,8 @@
 
   <description>
     This is an adaptation of the model of the 3DR Iris Quadrotor. The original model has been created by
-    Thomas Gubler and is maintained by Lorenz Meier. This model includes two cylindrical wings, below the
-    center of the main frame, connected to it by revolute joints that allow rotation around the y-axis.
+    Thomas Gubler and is maintained by Lorenz Meier. This model composes the Iris model together with the 
+    Magnus wings model, which is composed by two cylindrical wings put together by a main link through 
+    revolute joints, ideally placed below the center of the main frame, connected to it by a fixed joint.
   </description>
 </model>
