add models: winch_station & anchor_point + add plugin: cable_plugin

--- a/models/anchor_point/model.config
+++ b/models/anchor_point/model.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <model>
-  <name>station_cable</name>
+  <name>anchor_point</name>
   <version>1.0</version>
-  <sdf version='1.0'>station_cable.sdf</sdf>
+  <sdf version='1.0'>anchor_point.sdf</sdf>
 
   <author>
    <name>Alexandre Sarazin</name>
@@ -10,6 +10,6 @@
   </author>
 
   <description>
-    This is a model of station + cable for gazebo.
+    This is a model of the anchor point for gazebo.
   </description>
 </model>
