Cleaned everything related to acceleration estimation & control Added feedforward & integrator control as options Updated parameters: parameters for physical drones are still with old, tested control

--- a/config/magnus_params.yaml
+++ b/config/magnus_params.yaml
@@ -8,6 +8,8 @@
 ###############################################################################
 ctrl_freq: 100
 
+fsf_FF: true
+fsf_INT: false
 fsf_x_P: 1.0
 fsf_x_S: 1.7
 fsf_y_P: 1.0
