--- a/config/draco_r_params.yaml
+++ b/config/draco_r_params.yaml
@@ -8,6 +8,8 @@
 ###############################################################################
 ctrl_freq: 100
 
+fsf_FF: true
+fsf_INT: false
 fsf_x_P: 0.37
 fsf_x_S: 0.87
 fsf_y_P: 0.37
