--- a/config/munchkin_params.yaml
+++ b/config/munchkin_params.yaml
@@ -8,6 +8,8 @@
 ###############################################################################
 ctrl_freq: 100
 
+fsf_FF: true
+fsf_INT: false
 fsf_x_P: 0.88
 fsf_x_S: 1.3
 fsf_y_P: 0.88
